test environment setup extracted from role oidc-extension to testenvironment role

--- a/roles/oidc-extension/defaults/main.yml
+++ b/roles/oidc-extension/defaults/main.yml
@@ -1,7 +1,3 @@
 ---
 #environment variables to source for building shibboleth idp package
-environment_file: /etc/default/shibboleth
-
-dirsrv_fqdn: "{{ ansible_fqdn }}"
-dirsrv_hostname: "{{ dirsrv_fqdn.split('.')[0] }}"
-dirsrv_suffix: "dc={{ dirsrv_fqdn.split('.')[-2] | default(389) }},dc={{ dirsrv_fqdn.split('.')[-1] }}"
+environment_file: /etc/default/shibboleth-idp
