--- a/oidcshibop.yml
+++ b/oidcshibop.yml
@@ -11,11 +11,11 @@
     - { role: CSCfi.jetty }
     - { role: CSCfi.shibboleth-idp, shibbolethidp_version: 3.4.0,  configurables: ['consent','nameid'], scope: csc.fi, port: 8443, bport: 8444, keystore_password: testpword }
     - { role: keystore, idp: true, keystore_password: testpword }
-    - { role: oidc-extension, build_user: vagrant, idp_home: /opt/shibboleth-idp, environment_file: /etc/default/shibboleth-idp, dirsrv_rootdn: "cn=Directory Manager", dirsrv_password: testpword, replpwd: testpword, administration_domain: csc.fi, root: "dc=csc,dc=fi", supplier: "{{ service_name }}", mode: single, service_name: "{{ service_name }}", aci: "teppo@{{ service_name }}"}
+    - { role: testenvironment, idp_home: /opt/shibboleth-idp, dirsrv_rootdn: "cn=Directory Manager", dirsrv_password: testpword, replpwd: testpword, administration_domain: csc.fi, root: "dc=csc,dc=fi", supplier: "{{ service_name }}", mode: single, service_name: "{{ service_name }}", aci: "teppo@{{ service_name }}"}
+    - { role: oidc-extension, build_user: vagrant, idp_home: /opt/shibboleth-idp, service_name: "{{ service_name }}"}
   
   tasks:
     - name: initial packages
       yum: name={{ item }} state=present
       with_items:
         - nano
-        - unzip
