--- a/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
+++ b/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
@@ -33,6 +33,6 @@ idp.oidc.issuer = https://your.issuer.example.com
 # Storage for revocation cache. Requires server-side storage
 #idp.oidc.revocationCache.StorageService = shibboleth.StorageService
 
-# Signing keys for oidc id tokens / userinfo response. The default keys in installation are not unique! Replace!
+# Signing keys for oidc id tokens / userinfo response. The default keys provided by installation are not unique! Replace!
 idp.signing.oidc.rs.key = %{idp.home}/credentials/idp-signing-rs.jwk
 idp.signing.oidc.es.key = %{idp.home}/credentials/idp-signing-es.jwk
