--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,7 @@
 - src: cmprescott.xml
 - src: CSCfi.mariadb
 - src: CSCfi.jetty
-- src: CSCfi.shibboleth-idp
+- src: https://github.com/klaalo/ansible-role-shibboleth-idp
+  name: shibboleth-idp
 - src: CSCfi.apache
 - src: CSCfi.389-ds
