--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>org.geant</groupId>
     <artifactId>idp-oidc-extension-parent</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.0</version>
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -118,7 +118,7 @@
             </dependency>
             <dependency>
                 <groupId>org.geant</groupId>
-                <version>0.8.0-SNAPSHOT</version>
+                <version>0.8.0</version>
                 <artifactId>idp-oidc-extension-api</artifactId>
             </dependency>
             <dependency>
