allow request object signing algorithm none regardless of defined signing configuration algorithms

--- a/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
+++ b/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
@@ -14,6 +14,8 @@ idp.oidc.issuer = https://your.issuer.example.com
 #idp.oidc.dynreg.defaultSubjectType = public
 # The acceptable client authentication methods when using dynamic registration
 #idp.oidc.dynreg.tokenEndpointAuthMethods = client_secret_basic,client_secret_post,client_secret_jwt,private_key_jwt
+# Regardless of what signing algorithms are configured, allow none for request object signing
+#idp.oidc.dynreg.allowNoneForRequestSigning = true
 
 # Storage for storing remote jwk sets.
 #idp.oidc.jwk.StorageService = shibboleth.StorageService
