--- a/idp-oidc-extension-distribution/pom.xml
+++ b/idp-oidc-extension-distribution/pom.xml
@@ -16,7 +16,9 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <tarLongFileMode>posix</tarLongFileMode>
-          <descriptor>src/assembly/dep.xml</descriptor>
+          <descriptors>
+              <descriptor>src/assembly/dep.xml</descriptor>
+          </descriptors>
         </configuration>
         <executions>
           <execution>
