--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
             </dependency>
             <dependency>
                 <groupId>org.geant</groupId>
-                <version>0.9.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <artifactId>idp-oidc-extension-api</artifactId>
             </dependency>
             <dependency>
