request object decryption, support for defining request object decryption algorithms and keys

--- a/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
+++ b/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
@@ -42,3 +42,5 @@ idp.oidc.issuer = https://your.issuer.example.com
 # Signing keys for oidc id tokens / userinfo response. 
 idp.signing.oidc.rs.key = %{idp.home}/credentials/idp-signing-rs.jwk
 idp.signing.oidc.es.key = %{idp.home}/credentials/idp-signing-es.jwk
+# Request object decryption key
+idp.signing.oidc.rsa.enc.key = %{idp.home}/credentials/idp-encryption-rsa.jwk
