--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -113,6 +113,7 @@
   with_items:
     - "idp-signing-es.jwk"
     - "idp-signing-rs.jwk" 
+    - "idp-encryption-rsa.jwk"
     
 - name: Publish keyset.
   template: src={{ playbook_dir }}/roles/oidc-extension/templates/{{item}} dest=/opt/shibboleth-idp/static/oidc/{{item}}
