--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
-<!-- See LICENSE.txt file in the root directory of this repository for the 
-    copyright/license information. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- See LICENSE.txt file in the root directory of this repository for the copyright/license information. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -158,6 +156,13 @@
                 <artifactId>opensaml-storage-impl</artifactId>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.geant</groupId>
+                <version>${project.version}</version>
+                <artifactId>idp-oidc-extension-api</artifactId>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -209,15 +214,12 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <!-- Checkstyle configuration for checkstyle:* goals called directly 
-                from the command line. -->
-            <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-checkstyle-plugin</artifactId> 
-                <configuration> <configLocation>${checkstyle.configLocation}</configLocation> 
-                </configuration> <executions> <execution> <id>validate</id> <phase>package</phase> 
-                <configuration> <configLocation>${checkstyle.configLocation}</configLocation> 
-                <encoding>UTF-8</encoding> <consoleOutput>true</consoleOutput> <failsOnError>true</failsOnError> 
-                <linkXRef>false</linkXRef> </configuration> <goals> <goal>check</goal> </goals> 
-                </execution> </executions> </plugin> -->
+            <!-- Checkstyle configuration for checkstyle:* goals called directly from the command line. -->
+            <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-checkstyle-plugin</artifactId> <configuration> 
+                <configLocation>${checkstyle.configLocation}</configLocation> </configuration> <executions> <execution> <id>validate</id> 
+                <phase>package</phase> <configuration> <configLocation>${checkstyle.configLocation}</configLocation> <encoding>UTF-8</encoding> 
+                <consoleOutput>true</consoleOutput> <failsOnError>true</failsOnError> <linkXRef>false</linkXRef> </configuration> <goals> 
+                <goal>check</goal> </goals> </execution> </executions> </plugin> -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -255,8 +257,7 @@
             </plugin>
         </plugins>
     </build>
-    <!-- <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-        <artifactId>maven-checkstyle-plugin</artifactId> <version>${checkstyle.version}</version> 
-        <configuration> <configLocation>${checkstyle.configLocation}</configLocation> 
-        </configuration> </plugin> </plugins> </reporting> -->
+    <!-- <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-checkstyle-plugin</artifactId> 
+        <version>${checkstyle.version}</version> <configuration> <configLocation>${checkstyle.configLocation}</configLocation> </configuration> 
+        </plugin> </plugins> </reporting> -->
 </project>
