Added some attribute resolution related properties

--- a/idp-oidc-extension-impl/src/test/resources/conf/idp-oidc.properties
+++ b/idp-oidc-extension-impl/src/test/resources/conf/idp-oidc.properties
@@ -2,3 +2,5 @@ idp.signing.oidc.rs.key = /credentials/idp-signing-rs.jwk
 idp.signing.oidc.es.key = /credentials/idp-signing-es.jwk
 idp.signing.oidc.rsa.enc.key = /credentials/idp-encryption-rsa.jwk
 idp.oidc.issuer = https://op.example.org
+idp.oidc.subject.sourceAttribute = uid
+idp.oidc.subject.salt = isfd07fsddfs70sdf9d99s8
