validation credential handling refactored to collect all possible credentials needed

--- a/idp-oidc-extension-api/pom.xml
+++ b/idp-oidc-extension-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>idp-oidc-extension-parent</artifactId>
         <groupId>org.geant</groupId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>idp-oidc-extension-api</artifactId>
     <packaging>jar</packaging>
