run flow authorize flow test with no client side storage

--- a/idp-oidc-extension-impl/src/test/resources/conf/idp.properties
+++ b/idp-oidc-extension-impl/src/test/resources/conf/idp.properties
@@ -100,7 +100,7 @@ idp.storage.htmlLocalStorage = true
 #idp.session.enabled = true
 
 # Set to "shibboleth.StorageService" for server-side storage of user sessions
-#idp.session.StorageService = shibboleth.ClientSessionStorageService
+idp.session.StorageService = shibboleth.StorageService
 
 # Size of session IDs
 #idp.session.idSize = 32
