Added properties for idp.oidc.forcePKCE and idp.oidc.allowPKCEPlain.

--- a/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
+++ b/idp-oidc-extension-distribution/src/main/resources/conf/idp-oidc.properties
@@ -40,3 +40,7 @@ idp.signing.oidc.rs.key = %{idp.home}/credentials/idp-signing-rs.jwk
 idp.signing.oidc.es.key = %{idp.home}/credentials/idp-signing-es.jwk
 # Request object decryption key
 idp.signing.oidc.rsa.enc.key = %{idp.home}/credentials/idp-encryption-rsa.jwk
+
+#PKCE/AppAuth related properties
+#idp.oidc.forcePKCE = false
+#idp.oidc.allowPKCEPlain = false
